# routes/api.php
@@ -30,16 +30,18 @@ Route::controller(AuthController::class)->group(function () {
 
 Route::controller(UserController::class)->group(function () {
     Route::get('users/index', 'index');
-    Route::get('users/show', 'show');
-    Route::put('users/update', 'update');
-    Route::delete('users/delete', 'destroy');
+    Route::get('users/show/{id}', 'show');
+    Route::put('users/update/{id}', 'update');
+    Route::delete('users/delete/{id}', 'destroy');
     Route::get('users/getinfo', 'getinfo');
 });
 
 Route::controller(AccountsController::class)->group(function () {
     Route::get('accounts/index', 'index');
-    Route::get('accounts/show', 'show');
-    Route::put('accounts/update', 'update');
-    Route::delete('accounts/delete', 'destroy');
-    Route::get('accounts/create', 'create');
+    Route::post('accounts/create', 'create');
+    Route::get('accounts/show/{id}', 'show');
+    Route::put('accounts/update/{id}', 'update');
+    Route::delete('accounts/delete/{id}', 'destroy');
+    Route::put('accounts/add_users/{id}', 'addUsersToAccount');
+    Route::put('accounts/remove_users/{id}', 'removeUsersFromAccount');
 });
